--- a/templates/base/admin/user.latte
+++ b/templates/base/admin/user.latte
@@ -2,12 +2,13 @@
 
 {block main}
     <main class="grow p-4 w-full max-w-5xl mx-auto">
-        <form action="{= _p('BASE_PATH') . 'admin/user/post'}" method="POST" enctype="multipart/form-data">
+        <form action="{path('BASE_PATH') . 'admin/user/post'}" method="POST" enctype="multipart/form-data">
+            {csrf()}
+
             <div class="space-y-4">
                 <h1 class="leading-none text-6xl font-bold">Users</h1>
 
-                {if isset($users)}
-                    <div class="overflow-x-auto">
+                    <div n:ifset="$users" class="overflow-x-auto">
                         <table class="table">
                             <thead>
                             <tr>
@@ -25,17 +26,17 @@
                                     <td>{$user->username}</td>
                                     <td>{$user->email}</td>
                                     <td>
-                                        {\Ivy\Button::switch('user[' . $user->getId() . '][super_admin]', \Ivy\User::admin()->doesUserHaveRole($user->getId(), \Delight\Auth\Role::SUPER_ADMIN))}
+                                        {\Ivy\Button::switch('user[' . $user->id . '][super_admin]', \Ivy\User::getAuth()->admin()->doesUserHaveRole($user->id, \Delight\Auth\Role::SUPER_ADMIN))}
                                     </td>
                                     <td>
-                                        {\Ivy\Button::switch('user[' . $user->getId() . '][admin]', \Ivy\User::admin()->doesUserHaveRole($user->getId(), \Delight\Auth\Role::ADMIN))}
+                                        {\Ivy\Button::switch('user[' . $user->id . '][admin]', \Ivy\User::getAuth()->admin()->doesUserHaveRole($user->id, \Delight\Auth\Role::ADMIN))}
                                     </td>
                                     <td>
-                                        {\Ivy\Button::switch('user[' . $user->getId() . '][editor]', \Ivy\User::admin()->doesUserHaveRole($user->getId(), \Delight\Auth\Role::EDITOR))}
+                                        {\Ivy\Button::switch('user[' . $user->id . '][editor]', \Ivy\User::getAuth()->admin()->doesUserHaveRole($user->id, \Delight\Auth\Role::EDITOR))}
                                     </td>
                                     <td class="text-right">
                                         <div class="join">
-                                            {\Ivy\Button::delete("user[" . $user->getId() . "][delete]", "user_" . $user->getId())}
+                                            {\Ivy\Button::delete("user[" . $user->id . "][delete]", "user_" . $user->id)}
                                         </div>
                                     </td>
                                 </tr>
@@ -47,7 +48,6 @@
                     <div class="text-center">
                         {\Ivy\Button::submit('update')}
                     </div>
-                {/if}
 
             </div>
         </form>
