--- a/templates/base/admin/profile.latte
+++ b/templates/base/admin/profile.latte
@@ -2,57 +2,63 @@
 
 {block main}
     <main class="grow p-4">
-        <form action="{= _p('BASE_PATH') . 'admin/profile/post'}" method="POST" enctype="multipart/form-data"
+        <form action="{path('BASE_PATH') . 'admin/profile/post'}" method="POST" enctype="multipart/form-data"
               class="max-w-xl mx-auto">
+            {csrf()}
 
             <div class="space-y-4">
                 <h1 class="leading-none text-6xl font-bold">Profile</h1>
 
                 <div>
-                    {foreach \Ivy\User::getRoles() as $key => $value}
-                        <span class="badge text-xs">{$value}</span>
+                    {foreach \Ivy\User::getAuth()->getRoles() as $role}
+                        <span class="badge badge-xs p-3">{$role}</span>
                     {/foreach}
                 </div>
 
                 <div class="form-group">
                     <div class="avatar">
-                        {if isset($profile) && $profile->getCurrentUserImage()}
+                        {if isset($profile) && !empty($profile->hasCurrentUserImage())}
 
                             <div class="w-36 rounded-full">
-                                <img src="{= _p('BASE_PATH') . 'media/item/thumb/' . $profile->getCurrentUserImage()}"
-                                     alt="{\Ivy\User::getUsername()}"/>
+                                <img src="{path('BASE_PATH') . path('MEDIA_PATH') . 'profile/' . $profile->getCurrentUserImage()}"
+                                     alt="{\Ivy\User::getAuth()->getUsername()}"/>
                             </div>
                             <div class="join">
-                                {\Ivy\Button::delete('user_image', 'delete')}
+                                {\Ivy\Button::delete('avatar', 'delete')}
                             </div>
 
                         {else}
 
-                            <div id="usersImagePreview" class="w-36 rounded-full">
-                                {\Ivy\Button::upload('user_image', 'upload')}
+                            <div class="indicator">
+                                <div class="indicator-item indicator-middle indicator-center w-10 h-10">
+                                    {\Ivy\Button::upload('avatar', 'upload')}
+                                </div>
+                                <div id="userImagePreview" class="h-36 w-36 rounded-full border dark:border-gray-700">
+
+                                </div>
+                                <script>
+                                    window.addEventListener('DOMContentLoaded', () => {
+                                        previewImage("avatar", "userImagePreview", "background");
+                                    });
+                                </script>
                             </div>
-                            <script>
-                                window.addEventListener('DOMContentLoaded', () => {
-                                    previewImage("user_image", "usersImagePreview", "background");
-                                });
-                            </script>
 
                         {/if}
                     </div>
                 </div>
 
-                <input name="users[id]" type="hidden" value="{$profile->getCurrentUserId()}">
+                <input name="user_id" type="hidden" value="{$profile->getCurrentUserId()}">
 
                 <div>
                     <label>
-                        <input class="input input-bordered w-full" name="users[username]" type="text" placeholder="name"
+                        <input class="input input-bordered w-full" name="username" type="text" placeholder="name"
                                value="{$profile->getCurrentUsername()}">
                     </label>
                 </div>
 
                 <div>
                     <label>
-                        <input class="input input-bordered w-full" name="users[email]" type="email" placeholder="email"
+                        <input class="input input-bordered w-full" name="email" type="email" placeholder="email"
                                value="{$profile->getCurrentEmail()}">
                     </label>
                 </div>
