--- a/templates/base/admin/register.latte
+++ b/templates/base/admin/register.latte
@@ -2,36 +2,38 @@
 
 {block main}
     <main class="grow p-4">
-        <form action="{= _p('BASE_PATH') . 'admin/user/register/'}" method="POST" enctype="multipart/form-data"
-              class="max-w-xl mx-auto">
+        <form action="{path('BASE_PATH') . 'admin/user/register/'}" method="POST" enctype="multipart/form-data"
+              class="max-w-xl mx-auto" autocomplete="off">
+            {csrf()}
+
             <div class="space-y-4">
-                <h1 class="leading-none text-6xl font-bold">Register</h1>
+                <h1 class="leading-none text-6xl font-bold">{text('register.header')}</h1>
 
                 <div>
                     <label>
-                        <input type="text" name="username" placeholder="name" class="input input-bordered w-full">
+                        <input type="text" name="username" placeholder="{text('core.placeholder.username')}" class="input input-bordered w-full">
                     </label>
                 </div>
 
                 <div>
                     <label>
-                        <input type="email" name="email" placeholder="email" class="input input-bordered w-full">
+                        <input type="email" name="email" placeholder="{text('core.placeholder.email')}" class="input input-bordered w-full">
                     </label>
                 </div>
 
                 <div>
                     <label>
-                        <input type="password" name="password" placeholder="password"
-                               class="input input-bordered w-full">
+                        <input type="password" name="password" placeholder="{text('core.placeholder.password')}"
+                               class="input input-bordered w-full" autocomplete="new-password">
                     </label>
                 </div>
 
                 <div class="text-center">
-                    {\Ivy\Button::submit('register')}
+                    {\Ivy\Button::submit(text('register.button.submit'))}
                 </div>
 
                 <div class="text-center">
-                    <a class="text-xs" href="{= _p('BASE_PATH') . 'admin/login'}">Have an account? Login</a>
+                    <a class="text-xs" href="{path('BASE_PATH') . 'admin/login'}">{text('register.link.login')}</a>
                 </div>
 
             </div>
