--- a/templates/base/admin/setting.latte
+++ b/templates/base/admin/setting.latte
@@ -2,7 +2,9 @@
 
 {block main}
     <main class="grow p-4 w-full max-w-5xl mx-auto">
-        <form action="{= _p('BASE_PATH') . 'admin/setting/post'}" method="POST" enctype="multipart/form-data">
+        <form action="{path('BASE_PATH') . 'admin/setting/post'}" method="POST" enctype="multipart/form-data">
+            {csrf()}
+
             <div class="space-y-4">
                     <h1 class="leading-none text-6xl font-bold">Settings</h1>
 
@@ -19,36 +21,36 @@
                             </thead>
                             <tbody>
                             {foreach $settings as $key => $setting}
-                                {if $setting->getName()}
+                                {if $setting->name}
                                     <tr>
                                         <td>
-                                            {\Ivy\Button::switch("setting[$key][bool]", $setting->getBool())}
+                                            {\Ivy\Button::switch("setting[$key][bool]", $setting->bool)}
                                         </td>
                                         <td class="font-bold">
-                                            {$setting->getName()}
+                                            {$setting->name}
                                         </td>
                                         <td>
                                             <label>
                                                 <input type="text" name="setting[{$key}][value]"
-                                                       value="{$setting->value ?? ''}" class="input input-bordered w-full">
+                                                       value="{$setting->value}" class="input input-bordered w-full">
                                             </label>
                                         </td>
-                                        {if empty($setting->getInfo()) && !empty($setting->getName())}
+                                        {if !$setting->info && $setting->name}
                                             <td>
                                                 <label>
                                                     <input type="text" name="setting[{$key}][info]"
-                                                           value="{$setting->info ?? ''}" class="input input-bordered w-full">
+                                                           value="" class="input input-bordered w-full">
                                                 </label>
                                             </td>
                                         {else}
-                                            <td>{$setting->getInfo()}</td>
+                                            <td>{$setting->info}</td>
                                         {/if}
                                         <td class="text-right">
                                             <input type="hidden" name="setting[{$key}][id]"
-                                                   value="{$setting->getId()}">
+                                                   value="{$setting->id}">
                                             <div class="join">
                                                 {\Ivy\Button::delete("setting[$key][delete]", "setting_" .
-                                                $setting->getId())}
+                                                $setting->id)}
                                             </div>
                                         </td>
                                     </tr>
